--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ local Tabs = {
 local Options = Fluent.Options
 
 do
-    Fluent:Notify({ Title = "Notification", Content = "This is a notification", SubContent = "SubContent", Duration = 5 })
+    Fluent:Notify({ Title = "Notification", Content = "Loading Vexto V2", SubContent = "Loading", Duration = 5 })
     
     Tabs.Credits:AddParagraph({ Title = "Vexto V2 Premium Credits", Content = "Created by: Fivestar\nLead Scripter: Fivestar\nUI: Fluent Library\nVersion: " .. Fluent.Version .. "\nUpdated: March 27, 2025\nThanks!" })
     Tabs.Credits:AddButton({ Title = "Copy Discord Link📎", Callback = function() 
