--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@ enterButton.MouseLeave:Connect(function() enterButton.BackgroundTransparency = 0
 getKeyButton.MouseEnter:Connect(function() getKeyButton.BackgroundTransparency = 0.2 end)
 getKeyButton.MouseLeave:Connect(function() getKeyButton.BackgroundTransparency = 0.3 end)
 
-local validKey = "VEXTONEWUPDATEV3"
+local validKey = "VEXTONEWUPCOMING123"
 
 enterButton.MouseButton1Click:Connect(function()
     local enteredKey = keyInput.Text
