--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ end
 local function validateKey(inputKey)
     local validKeys = {
         "VEXTO2023X",
-        "BRONX3SECURE",
+        "BRONX3SEC",
         "VEXTOISTHEBEST"
     }
     for _, key in pairs(validKeys) do
