--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@ end
 
 local function validateKey(inputKey)
     local validKeys = {
-        "VEXTO2023X",
-        "BRONX3SEC",
-        "VEXTOISTHEBEST"
+        "VEXTO2023X5",
+        "BRONX3SEC23",
+        "VEXTOISCOOL"
     }
     for _, key in pairs(validKeys) do
         if inputKey == key then
