--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ local function validateKey(inputKey)
     local validKeys = {
         "VEXTO2023X5",
         "BRONX3SEC23",
-        "VEXTOISCOOL"
+        "VEXTOISCOCO"
     }
     for _, key in pairs(validKeys) do
         if inputKey == key then
