--- a/index.html
+++ b/index.html
@@ -3384,9 +3384,23 @@ v6.Shop:AddButton(
             game:GetService("ReplicatedStorage"):WaitForChild("ShopRemote"):InvokeServer("BluCamoGloves")
         end}
 )
-v6.ExoticShop:AddButton(
-    {Title = "FakeCard (700$)", Description = "Instantly buys the item", Callback = function()
-            game:GetService("ReplicatedStorage"):WaitForChild("ExoticShopRemote"):InvokeServer("FakeCard")
+v6.Shop:AddButton(
+    {Title = "Ice-Fruit Cupz (150$)", Description = "Instantly buys the item", Callback = function()
+            game:GetService("ReplicatedStorage"):WaitForChild("ExoticShopRemote"):InvokeServer("Ice-Fruit Cupz")
         end}
 )
-
+v6.Shop:AddButton(
+    {Title = "Ice-Fruit Bag (2500$)", Description = "Instantly buys the item", Callback = function()
+            game:GetService("ReplicatedStorage"):WaitForChild("ExoticShopRemote"):InvokeServer("Ice-Fruit Bag")
+        end}
+)
+v6.Shop:AddButton(
+    {Title = "G26 (550$)", Description = "Instantly buys the item", Callback = function()
+            game:GetService("ReplicatedStorage"):WaitForChild("ExoticShopRemote"):InvokeServer("G26")
+        end}
+)
+v6.Shop:AddButton(
+    {Title = "Lemonade (500$)", Description = "Instantly buys the item", Callback = function()
+            game:GetService("ReplicatedStorage"):WaitForChild("ExoticShopRemote"):InvokeServer("Lemonade")
+        end}
+)
