--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ local v3 = v0:CreateWindow({
     Title = "Vexto V3 | Tha Bronx 3 🌊",
     TabWidth = 230 - (64 + 6),
     Size = UDim2.fromOffset(580, 460),
-    Theme = "Darker",
+    Theme = "Amethyst",
     MinimizeKey = Enum.KeyCode.RightShift
 })
 
