--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ end
 
 -- Main Script Continues After Authentication
 local v3 = v0:CreateWindow({
-    Title = "Vexto V3 | Tha Bronx 3 🌊",
+    Title = "Vexto V3 | Tha Bronx 3 🌊 License|Lifetime",
     TabWidth = 230 - (64 + 6),
     Size = UDim2.fromOffset(580, 460),
     Theme = "Amethyst",
