--- a/index.html
+++ b/index.html
@@ -145,19 +145,19 @@ v0:Notify({Title = "Anti-Cheat Bypass", Content = "Bypass is Loaded", SubContent
 local v6 = {
     Credits = v3:AddTab({Title = "Credits", Icon = "paperclip"}),
     Visual = v3:AddTab({Title = "Visual", Icon = "aperture"}),
-    Combat = v3:AddTab({Title = "Combat", Icon = "skull"}),
+    Combat = v3:AddTab({Title = "Ez kill", Icon = "skull"}),
     Player = v3:AddTab({Title = "Player", Icon = "user"}),
     Others = v3:AddTab({Title = "Others", Icon = "users"}),
-    Troll = v3:AddTab({Title = "Troll", Icon = "laugh"}),
-    PickUp = v3:AddTab({Title = "PickUp", Icon = "grab"}),
-    Dupe = v3:AddTab({Title = "Dupe", Icon = "briefcase"}),
+    Troll = v3:AddTab({Title = "Anonymous", Icon = "laugh"}),
+    PickUp = v3:AddTab({Title = "PickUp Features", Icon = "grab"}),
+    Dupe = v3:AddTab({Title = "Dupe Features", Icon = "briefcase"}),
     AutoFarm = v3:AddTab({Title = "AutoFarm", Icon = "leaf"}),
-    Money = v3:AddTab({Title = "Money", Icon = "wallet"}),
-    Teleport = v3:AddTab({Title = "Teleport", Icon = "map"}),
+    Money = v3:AddTab({Title = "Money Features", Icon = "wallet"}),
+    Teleport = v3:AddTab({Title = "Teleports", Icon = "map"}),
     Shop = v3:AddTab({Title = "Shop", Icon = "shopping-cart"}),
     Bypasses = v3:AddTab({Title = "Bypasses", Icon = "shield-check"}),
-    Game = v3:AddTab({Title = "Game", Icon = "cog"}),
-    Settings = v3:AddTab({Title = "Settings", Icon = "cog"})
+    Game = v3:AddTab({Title = "Game Settings", Icon = "cog"}),
+    Settings = v3:AddTab({Title = "UI Settings", Icon = "cog"})
 }
 
 local function v7()
