--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@ local v6 = {
     Credits = v3:AddTab({Title = "Credits", Icon = "paperclip"}),
     Visual = v3:AddTab({Title = "Visual", Icon = "aperture"}),
     Combat = v3:AddTab({Title = "Ez kill", Icon = "skull"}),
-    Player = v3:AddTab({Title = "Player", Icon = "user"}),
+    Player = v3:AddTab({Title = "Player Features", Icon = "user"}),
     Others = v3:AddTab({Title = "Others", Icon = "users"}),
     Troll = v3:AddTab({Title = "Anonymous", Icon = "laugh"}),
     PickUp = v3:AddTab({Title = "PickUp Features", Icon = "grab"}),
@@ -158,6 +158,8 @@ local v6 = {
     Bypasses = v3:AddTab({Title = "Bypasses", Icon = "shield-check"}),
     Game = v3:AddTab({Title = "Game Settings", Icon = "cog"}),
     Settings = v3:AddTab({Title = "UI Settings", Icon = "cog"})
+    Gun Mods = v3:AddTab({Title = "Gun Mods", Icon = "gun"})
+
 }
 
 local function v7()
