--- a/index.html
+++ b/index.html
@@ -157,8 +157,8 @@ local v6 = {
     Shop = v3:AddTab({Title = "Shop", Icon = "shopping-cart"}),
     Bypasses = v3:AddTab({Title = "Bypasses", Icon = "shield-check"}),
     Game = v3:AddTab({Title = "Game Settings", Icon = "cog"}),
-    Settings = v3:AddTab({Title = "UI Settings", Icon = "cog"})
-    Gun Mods = v3:AddTab({Title = "Gun Mods", Icon = "gun"})
+    Settings = v3:AddTab({Title = "UI Settings", Icon = "cog"}),
+    Gun Mods = v3:AddTab({Title = "Gun Mods", icon = "anonymous"
 }
 
 local function v7()
